--- a/agentic3d/pyproject.toml
+++ b/agentic3d/pyproject.toml
@@ -7,8 +7,9 @@ readme = "README.md"
 packages = [{include = "agentic3d", from = "src"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.11,<3.14"
 autogen-agentchat = ">=0.2,<1.0"
+pyautogen = "^0.5.3"
 
 
 [build-system]
